Fixing a couple JS errors and removing Y scrollbar from Grid settings container
Lost in all the whitespace, I moved the Grid event caching trick from publish.js to global_start.js so that it would work on the settings page too.

--- a/themes/cp_themes/default/css/grid.css
+++ b/themes/cp_themes/default/css/grid.css
@@ -148,7 +148,7 @@ p.grid_error {
 
 #grid_col_settings_container {
 	margin-right: 97px;
-	overflow: scroll;
+	overflow-x: scroll;
 	padding-bottom: 15px;
 	width: 800px
 }
